<resources>
    <string name="app_name">budget-buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="monthly">Monthly Overview</string>
    <string name="budget">My Budget</string>

    <!-- Common Strings -->
    <string name="logout">Logout</string>
    <string name="profilePage">Profile Page</string>

    <!-- Splash Screen String -->
    <string name="lumos_logo">Lumos Logo</string>
    <string name="lumos">LUMOS</string>

    <!-- Login/Register Strings -->
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="loginEmailHint">Enter Email</string>
    <string name="loginPasswordHint">Enter Password</string>

    <string name="registerCreateAccount">Create Account</string>
    <string name="registerPasswordHint">Create Password</string>
    <string name="registerFirstNameHint">Enter First Name</string>
    <string name="registerLastNameHint">Enter Last Name</string>
    <string name="registerNameHint">Name</string>
    <string name="registerPhoneHint">Phone Number</string>
    <string name="registerAddressHint">Address</string>
    <string name="notifications">Notifications</string>
    <string name="back">&lt;</string>
    <string name="blank" />
    <string name="missingFirstNameField">Missing Required Field: Please enter your first name.</string>
    <string name="missingAllRequiredFields">Missing Required Fields: Please populate all fields.</string>
    <string name="missingLastNameField">Missing Required Field: Please enter your last name.</string>
    <string name="missingEmailAddressField">Missing Required Field: Please enter a valid email address.</string>
    <string name="missingPasswordField">Missing Required Field: Please enter a password.</string>
    <string name="invalidEmailPrompt">Oops we couldn\'t find a user with that email, please try again.</string>
    <string name="invalidCredentialsPrompt">Wrong password, please try again.</string>
    <string name="settingsResetBudget">Reset Budget</string>
    <string name="updateUserInfo">Update Info</string>

    <string name="settingsNameDisplay">Name: %1$s</string>
    <string name="settingsEmailDisplay">Email: %1$s</string>
    <string name="settingsPasswordDisplay">Password: %1$s</string>
    <string name="settingsUserInfoDisplay">User Information</string>
    <string name="settingsUpdateUserInfoDisplay">Update Information</string>

    <string name="settingsUpdateFirstNameHint">Change First Name</string>
    <string name="settingsUpdateLastNameHint">Change Last Name</string>
    <string name="settingsUpdatePasswordHint">Change Password</string>
    <string name="settingsUpdateEmailHint">Change Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="welcomePrompt">Thank you for choosing Budget Buddy!\nBefore you begin your journey of financial responsibility, please respond to the following questions as accurately as possible.</string>
    <string name="Proceed">Proceed</string>
    <string name="dupeEmailPrompt">A user with that email already exists. Please use another email address.</string>

    <string name="income">Income</string>
    <string name="housing">Housing</string>
    <string name="food">Food</string>
    <string name="personal">Personal</string>
    <string name="giving">Giving</string>
    <string name="transportation">Transportation</string>
    <string name="other">Other</string>
    <string name="ezexpense">EzExpense</string>
    <string name="save">save</string>
    <string name="paycheckFrequencyPrompt">How frequently are you paid?</string>
    <string name="budgetInitPrompt">At a minimum please populate these fields. Then we can initiate the budget overview page.</string>
    <string name="monthlyMonth">Monthly</string>
    <string name="bi_weekly">Bi-Weekly</string>
    <string name="weekly">Weekly</string>

    <string name="incomeIncomeDisplay">Income: $%1$s</string>
    <string name="incomePaymentFrequencyDisplay">Payment Frequency: %1$s</string>
    <string name="incomeNextPaydayDisplay">Next Payday: %1$s</string>
    <string name="current_information">Current Information</string>

    <string name="incomeIncomeInputPrompt">%1$s Income:</string>
    <string name="incomeEnterIncomeAmountHint">Enter Amount</string>
    <string name="next">next</string>
    <string name="next_paycheck_date">Next Paycheck Date?</string>
    <string name="update">Update</string>
    <string name="badPayDatePrompt">PAYCHECK DATE DENIED: You\'re attempting to set your next paycheck date to a past date.</string>
    <string name="savings">savings</string>
    <string name="lifestyle">lifestyle</string>
    <string name="health">health</string>
    <string name="insurance">insurance</string>
    <string name="debt">debt</string>

    <string name="givingRangeDisplay">Goal: 10–15%</string>
    <string name="givingCalculatedRangeDisplay">($%1$s–$%2$s)</string>
    <string name="page_logo">Page Logo</string>
    <string name="missingIncomeWarning">WARNING: Please provide your income amount via the \'Income\' tab to continue.</string>
    <string name="churchInput">Church:</string>

    <string name="inputHint">%1$s%2$s</string>
    <string name="charity">Charity:</string>
    <string name="enterPlannedBudgetAmount">Enter Amount</string>
    <string name="recurring">Recurring?</string>

    <string name="rangeCheck">Range Check: %1$s</string>
    <string name="total">Total: $%1$s</string>
    <string name="previous">Previous: $%1$s</string>
    <string name="givingErrorPrompt">"Please provide your income on the income tab before continuing."</string>

    <string name="variableString">$%1$s</string>
</resources>